# cpp-course-examples

./: .gitignore  CMakeLists.txt  LICENSE.MD  LICENSE.md  README.md
01-linear-algorithms/ex-01-01-hello-world/: CMakeLists.txt  main.cpp
01-linear-algorithms/ex-01-02-hello-world-ru/: CMakeLists.txt  main.cpp
01-linear-algorithms/ex-01-03-hello-world-ru-utf8/: CMakeLists.txt  main.cpp
01-linear-algorithms/ex-01-04-hello-world-ru-utf8-winapi/: CMakeLists.txt  main.cpp
01-linear-algorithms/ex-01-05-arithmetic-operators/: CMakeLists.txt  main.cpp
01-linear-algorithms/ex-01-06-assignment-operators-straustrup/: CMakeLists.txt  main.cpp
01-linear-algorithms/ex-01-07-data-types/: CMakeLists.txt  main.cpp
02-selection-statements/ex-02-01-if-else/: CMakeLists.txt  main.cpp
02-selection-statements/ex-02-02-switch/: CMakeLists.txt  main.cpp
02-selection-statements/ex-02-03-ternary-operator/: CMakeLists.txt  main.cpp
08-unit-testing/ex-08-01-calculator-unit-testing/: CMakeLists.txt
08-unit-testing/ex-08-01-calculator-unit-testing/src/: CMakeLists.txt  calculator.cpp  calculator.hpp  main.cpp
08-unit-testing/ex-08-01-calculator-unit-testing/tests/: CMakeLists.txt  test_calculator.cpp
08-unit-testing/ex-08-02-is-palindrom-unit-testing/: CMakeLists.txt
08-unit-testing/ex-08-02-is-palindrom-unit-testing/src/: main.cpp  str_lib.hpp
08-unit-testing/ex-08-02-is-palindrome-unit-testing/src/: CMakeLists.txt  str_lib.cpp
08-unit-testing/ex-08-02-is-palindrome-unit-testing/tests/: CMakeLists.txt  test_str_lib.cpp
09-struct-class/: ex-09-01-lesson.textClipping
09-struct-class/ex-09-01-lesson/: CMakeLists.txt
09-struct-class/ex-09-01-lesson/src/: CMakeLists.txt  Lesson.cpp  Lesson.hpp  main.cpp
09-struct-class/ex-09-02-natural-number/: CMakeLists.txt
09-struct-class/ex-09-02-natural-number/src/: CMakeLists.txt  NaturalNumber.cpp  NaturalNumber.hpp  main.cpp
09-struct-class/ex-09-03-internal-declaration-of-a-struct-employee/: CMakeLists.txt
09-struct-class/ex-09-03-internal-declaration-of-a-struct-employee/src/: CMakeLists.txt  statistics.cpp  statistics.hpp
09-union-enum-bit-fields/ex-09-01-union-data-variant/: CMakeLists.txt
09-union-enum-bit-fields/ex-09-01-union-data-variant/src/: CMakeLists.txt  Variant.cpp  Variant.hpp  main.cpp
09-union-enum-bit-fields/ex-09-02-strict-aliasing/: CMakeLists.txt
09-union-enum-bit-fields/ex-09-02-strict-aliasing/src/: CMakeLists.txt  main.cpp
09-union-enum-bit-fields/ex-09-03-internal-declaration-of-a-struct-employee/src/: CMakeLists.txt  main.cpp
cmake/: Dependencies.cmake
